test/let2.slq

def main(){
	x:=2;
	return let x:=3 in x; /// error
}
